# perp-dex

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
app/: Cargo.toml
app/src/: errors.rs  events.rs  lib.rs  types.rs  utils.rs
app/src/modules/: market.rs  mod.rs  oracle.rs  position.rs  pricing.rs  risk.rs  trading.rs
app/src/services/: admin_service.rs  executor_service.rs  market_service.rs  mod.rs  oracle_service.rs  trading_service.rs  view_service.rs  wallet_service.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
src/: lib.rs
tests/: gtest.rs
