[workspace]

members = ["client"]


[package]
name = "vara_perp_dex"
version = "0.1.0"
edition = "2024"

[dependencies]
vara_perp_dex_app = { path = "app" }

[build-dependencies]
vara_perp_dex_app = { path = "app" }
sails-rs = { version = "0.9.2", features = ["wasm-builder"] }
sails-idl-gen = "0.9.2"

[dev-dependencies]
vara_perp_dex = { path = ".", features = ["wasm-binary"] }
vara_perp_dex_client = { path = "client" }
sails-rs = { version = "0.9.2", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
