[package]
name = "vara_perp_dex_client"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.9.2"

[build-dependencies]
vara_perp_dex_app = { path = "../app" }
sails-client-gen = "0.9.2"
sails-idl-gen = "0.9.2"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
